syntax = "proto3";

package autokitteh.mappings.v1;

import "autokitteh/program/v1/program.proto";
import "buf/validate/validate.proto";

// We should not allow mappings for envs that do not belong to a project.
// Mappings such as these will not be able to specify entry_point_id since
// they don't map to a specific project. While action mappings could
// theoretically be possible, we choose not to allow them at that level
// as it could prove very confusing. To be discussed in the future based
// on need and explicit use cases.

message MappingEvent {
  string event_type = 1 [(buf.validate.field).string.min_len = 1];
  program.v1.CodeLocation code_location = 2 [(buf.validate.field).required = true];
}

message Mapping {
  string mapping_id = 1;

  string env_id = 2; // env must have a project parent.
  string connection_id = 3;

  string module_name = 4 [(buf.validate.field).string.min_len = 1];

  repeated MappingEvent events = 5 [(buf.validate.field).repeated.items.required = true];
}
